--- a/ojek.html
+++ b/ojek.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Tarif Ojek</title>
+<title>hallo</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <script>
         function hitung()
